--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,7 +8,7 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 0",
+    "test": "vitest",
     "migrate": " drizzle-kit migrate",
     "generate": "drizzle-kit generate",
     "studio": "drizzle-kit studio",
@@ -21,7 +21,8 @@
     "drizzle-orm": "^0.44.3",
     "drizzle-seed": "^0.3.1",
     "hono": "^4.8.5",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
