--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,6 +9,7 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "vitest",
+    "coverage": "vitest run --coverage",
     "migrate": " drizzle-kit migrate",
     "generate": "drizzle-kit generate",
     "studio": "drizzle-kit studio",
@@ -17,6 +18,7 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.16.0",
+    "@hono/zod-validator": "^0.7.1",
     "better-sqlite3": "^12.2.0",
     "drizzle-orm": "^0.44.3",
     "drizzle-seed": "^0.3.1",
@@ -28,6 +30,7 @@
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20.11.5",
     "@types/sqlite3": "^3.1.11",
+    "@vitest/coverage-v8": "^3.2.4",
     "drizzle-kit": "^0.31.4",
     "tsx": "^4.7.0",
     "typescript": "^5.4.2",
